--- a/ccyp/syb.html
+++ b/ccyp/syb.html
@@ -6,7 +6,7 @@
 <meta name="Description" content="Simple XHTML page for Habitat site"/>
 <title>Habitat for Humanity International Summer Youth Blitz Program</title>
 </head>
-<body bgcolor="while">
+<body bgcolor="white">
 Summer Build for Tenn-agersに参加しよう。
 Summer Youth Blitzは、アメリカ中の１６歳から１８歳までの若者たちが、奉仕活動のために集まるユニークなプログラムです。参加者は、高校生から各種の青年団まで多岐にわたります。このページはXHTML 1.0 Transitionalとして検証されます。
 </body>
