--- a/ccyp/syb.html
+++ b/ccyp/syb.html
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 <meta name="keywords" content="CIW, XHTML 1.0, Habitat for Humanity"/>
 <meta name="Description" content="Simple XHTML page for Habitat site"/>
+<link rel="stylesheet" type="text/css" href="syb/syb.css" title="stylesheet"/>
 <title>Habitat for Humanity International Summer Youth Blitz Program</title>
 </head>
-<body bgcolor="white">
+<body>
 Summer Build for Tenn-agersに参加しよう。
 Summer Youth Blitzは、アメリカ中の１６歳から１８歳までの若者たちが、奉仕活動のために集まるユニークなプログラムです。参加者は、高校生から各種の青年団まで多岐にわたります。このページはXHTML 1.0 Transitionalとして検証されます。
 </body>
